--- a/index.html
+++ b/index.html
@@ -7,28 +7,57 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-100 m-56 font-montserrat text-gray-600">
     <!--card perso info-->
-    <section class="grid grid-cols-2">
-      <img src="profile.jpg" alt="">
-      <div>
-        <div>
-          <div>
-            <div>Billy Pearson</div>
-            <div>Front-end developer</div>
+    <section class="grid grid-cols-3 bg-white rounded-xl shadow-md gap-12">
+      <img class="col-span-1 rounded-xl m-6" src="img/profile.jpg" alt="">
+      <div class="col-span-2">
+        <div class="grid grid-cols-3">
+          <div class="col-span-2 p-6">
+            <div class="text-2xl font-bold leading-29">hiba NEHILI</div>
+            <div class="text-lg">Front-end developer</div>
           </div>
-          <div>
-            <div><span class="material-icons text-blue-500">email</span>billy@example.com</div>
-            <div><i></i>(+603) 546 624 342</div>
+          <div class="p-6 font-semibold text-lg">
+            <div class="flex items-center gap-2 mb-2"><span class="material-icons text-gray-600">email</span>h_nehili@estin.dz</div>
+            <div class="flex items-center gap-2 mb-2"><span class="material-icons text-gray-600">phone</span>(+213)780656265</div>
           </div>
         </div>
-        <div>
-          Self-motivated developer, who is willing to learn and create outstanding UI applications. 
-  
-          Donec aliquam est dui, vel vestibulum diam sollicitudin id. Quisque feugiat malesuada molestie. 
+        <div class="p-4 grid gap-3">
+          <div class="text-lg">
+            Self-motivated developer, who is willing to learn and create outstanding UI applications. 
+          </div>
+          <div class="text-lg">
+            Donec aliquam est dui, vel vestibulum diam sollicitudin id. Quisque feugiat malesuada molestie. 
+          </div>
         </div>
       </div>
-      
+    </section>
+    <!--card skills-->
+    <section class="bg-white rounded-xl shadow-md m-3">
+      <div class="text-lg font-bold">FRONT END</div>
+      <div>
+        <div class="flex flex-row items-center gap-4">
+          <div class="">React</div>
+          <div class="bg-gray-300 rounded w-full h-2"><div class="bg-blue-500 rounded h-2 w-1/3"></div></div>
+        </div>
+        <div>
+          <div>React</div>
+          <div><div></div></div>
+        </div>
+        <div>
+          <div>React</div>
+          <div><div></div></div>
+        </div>
+        <div>
+          <div>React</div>
+          <div><div></div></div>
+        </div>
+        <div>
+          <div>React</div>
+          <div><div></div></div>
+        </div>
+        
+      </div>
     </section>
 </body>
 </html>
