--- a/index.html
+++ b/index.html
@@ -33,31 +33,37 @@
       </div>
     </section>
     <!--card skills-->
-    <section class="bg-white rounded-xl shadow-md m-3">
-      <div class="text-lg font-bold">FRONT END</div>
+    <section class="bg-white rounded-xl shadow-md m-3 p-6">
+      <div class="text-lg font-bold py-2">FRONT END</div>
       <div>
         <div class="flex flex-row items-center gap-4">
-          <div class="">React</div>
-          <div class="bg-gray-300 rounded w-full h-2"><div class="bg-blue-500 rounded h-2 w-1/3"></div></div>
+          <div class="w-20">React</div>
+          <div class="bg-gray-300 rounded flex-grow h-2"><div class="bg-blue-500 rounded h-2 w-1/3"></div></div>
         </div>
-        <div>
-          <div>React</div>
-          <div><div></div></div>
+        <div class="flex flex-row items-center gap-4">
+          <div class="w-20">CSS</div>
+          <div class="bg-gray-300 rounded flex-grow h-2"><div class="bg-blue-500 rounded h-2 w-1/3"></div></div>
         </div>
-        <div>
-          <div>React</div>
-          <div><div></div></div>
+        <div class="flex flex-row items-center gap-4">
+          <div class="w-20">Javascript</div>
+          <div class="bg-gray-300 rounded flex-grow h-2"><div class="bg-blue-500 rounded h-2 w-1/3"></div></div>
         </div>
-        <div>
-          <div>React</div>
-          <div><div></div></div>
+        <div class="flex flex-row items-center gap-4">
+          <div class="w-20">Django</div>
+          <div class="bg-gray-300 rounded flex-grow h-2"><div class="bg-blue-500 rounded h-2 w-1/3"></div></div>
         </div>
-        <div>
-          <div>React</div>
-          <div><div></div></div>
+        <div class="flex flex-row items-center gap-4">
+          <div class="w-20">Flask</div>
+          <div class="bg-gray-300 rounded flex-grow h-2"><div class="bg-blue-500 rounded h-2 w-1/3"></div></div>
         </div>
-        
+        <div class="flex flex-row items-center gap-4">
+          <div class="w-20">FastApi</div>
+          <div class="bg-gray-300 rounded flex-grow h-2"><div class="bg-blue-500 rounded h-2 w-1/3"></div></div>
+        </div>
       </div>
+    </section>
+    <section class="bg-white rounded-xl shadow-md m-3 p-6">
+
     </section>
 </body>
 </html>
