section three done ⚡

--- a/index.html
+++ b/index.html
@@ -62,8 +62,24 @@
         </div>
       </div>
     </section>
-    <section class="bg-white rounded-xl shadow-md m-3 p-6">
-
+    <section class="bg-white rounded-xl shadow-md m-3 p-6 w-1/3 float-left">
+      <div class="text-2xl font-semibold pb-6">Hobbies</div>
+      <div class="mb-6">
+        <img class="rounded-xl mb-4" src="img/draw.jpg" alt="">
+        <div class="text-lg font-bold pb-1">Drawing</div>
+        <div>Quisque feugiat malesuada molestie.</div>
+      </div>
+      <div class="mb-6">
+        <img class="rounded-xl mb-4" src="img/plant.jpg" alt="">
+        <div class="text-lg font-bold pb-1">Planting</div>
+        <div>Quisque feugiat malesuada molestie.</div>
+      </div>
+      <div class="mb-6">
+        <img class="rounded-xl mb-4" src="img/walking.jpg" alt="">
+        <div class="text-lg font-bold pb-1">Walking</div>
+        <div>Quisque feugiat malesuada molestie.</div>
+      </div>
     </section>
+    
 </body>
 </html>
