section four done 🚩

--- a/index.html
+++ b/index.html
@@ -80,6 +80,27 @@
         <div>Quisque feugiat malesuada molestie.</div>
       </div>
     </section>
-    
+    <!--card's experiences-->
+    <section class="bg-white rounded-xl shadow-md m-3 p-6 w-1/2 float-right">
+      <div class="text-2xl font-semibold pb-6">Experiences</div>
+      <div class="grid grid-cols-4 grid-rows-2 mb-6">
+        <div class="col-span-1"><img class="pr-8 p-4" src="img/gdsc.png" alt=""></div>
+        <div class="col-span-3">
+          <div>Feb 2017 - Current</div>
+          <div class="font-bold">Front-end developer</div>
+        </div>
+        <div></div>
+        <div class="col-span-3">Donec aliquam est dui, vel vestibulum diam sollicitudin id. Quisque feugiat malesuada molestie.</div>
+      </div>
+      <div class="grid grid-cols-4 grid-rows-2">
+        <div class="col-span-1"><img class="pr-8 p-4" src="img/logo-estin.png" alt=""></div>
+        <div class="col-span-3">
+          <div>Feb 2017 - Current</div>
+          <div class="font-bold">Front-end developer</div>
+        </div>
+        <div></div>
+        <div class="col-span-3">Donec aliquam est dui, vel vestibulum diam sollicitudin id. Quisque feugiat malesuada molestie.</div>
+      </div>
+    </section>
 </body>
 </html>
