section five done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>hiba NEHILI | CS student</title>
+  <title>hiba NEHILI | 3rd CS student</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
@@ -100,6 +100,19 @@
         </div>
         <div></div>
         <div class="col-span-3">Donec aliquam est dui, vel vestibulum diam sollicitudin id. Quisque feugiat malesuada molestie.</div>
+      </div>
+    </section>
+    <!--blog's section-->
+    <section class="bg-white rounded-xl shadow-md w-1/2 p-6 float-right grid grid-cols-3 grid-rows-4 gap-x-10">
+      <div>
+        <div class="text-gray-300 col-span-1 row-span-1 mb-4">Blog</div>
+        <div class="text-2xl font-bold mb-4">How to organize your CSS</div>
+      </div>
+      <img class="col-span-2 row-span-3 rounded-3xl" src="img/blog.jpg" alt="">
+      <div  class="col-span-3">
+        <div class="mb-4">In this article I tell the story about Proin eu justo sit amet lacus bibendum tincidunt. Vivamus non volutpat nisl, a luctus mi.  </div>
+        <div class="col-span-2 mb-4">Donec aliquam est dui, vel vestibulum diam sollicitudin id. Quisque feugiat malesuada molestie.</div>
+        <a class="col-span-2 text-blue-500 font-semibold" href="">dev.to</a>
       </div>
     </section>
 </body>
