last section done 🌟

--- a/index.html
+++ b/index.html
@@ -62,6 +62,47 @@
         </div>
       </div>
     </section>
+    <!--project title-->
+    <section class="bg-white rounded-xl shadow-md m-3 p-6 w-full">
+      <div class="text-lg font-bold mb-4">Projects (3)</div>
+      <div class="flex items-center">
+        <div class="px-4 py-1 border-2 border-gray-500 rounded-xl font-semibold mr-3">tailwind</div>
+        <div class="px-4 py-1 border-2 border-gray-500 rounded-xl font-semibold mr-3">Django</div>
+        <div class="px-4 py-1 border-2 border-gray-500 rounded-xl font-semibold  mr-3">Flask</div>
+        <div class="px-4 py-1 bg-blue-500 text-white rounded-xl font-semibold  mr-3">Responsive</div>
+      </div>
+    </section>
+    <!--project list-->
+    <section class="grid grid-cols-3 gap-6">
+      <div class="bg-white rounded-xl shadow-md p-6">
+        <img class="rounded-xl mb-4" src="img/challengesDesigns_EdieHomageThumbnail.jpg" alt="">
+        <div class="text-2xl font-semibold mb-4">Edie home page</div>
+        <div class="mb-8">In this project, I work with HTML and CSS to create a responsive page. This page is similiar with a page. The design is from devchallenge.io</div>
+        <div class="flex justify-center w-full">
+          <div class="px-10 py-3 bg-blue-500 text-white rounded-xl font-semibold mr-3">Demo</div>
+          <div class="px-10 py-3 border-2 border-blue-500  text-blue-500 rounded-xl font-semibold mr-3">Code</div>
+        </div>
+      </div>
+      <div class="bg-white rounded-xl shadow-md p-6">
+        <img class="rounded-xl mb-4" src="img/challengesDesigns_EdieHomageThumbnail.jpg" alt="">
+        <div class="text-2xl font-semibold mb-4">Edie home page</div>
+        <div class="mb-4">In this project, I work with HTML and CSS to create a responsive page. This page is similiar with a page. The design is from devchallenge.io</div>
+        <div class="flex justify-center w-full">
+          <div class="px-10 py-3 bg-blue-500 text-white rounded-xl font-semibold mr-3">Demo</div>
+          <div class="px-10 py-3 border-2 border-blue-500  text-blue-500 rounded-xl font-semibold mr-3">Code</div>
+        </div>
+      </div>
+      <div class="bg-white rounded-xl shadow-md p-6">
+        <img class="rounded-xl mb-4" src="img/challengesDesigns_EdieHomageThumbnail.jpg" alt="">
+        <div class="text-2xl font-semibold mb-4">Edie home page</div>
+        <div class="mb-4">In this project, I work with HTML and CSS to create a responsive page. This page is similiar with a page. The design is from devchallenge.io</div>
+        <div class="flex justify-center w-full">
+          <div class="px-10 py-3 bg-blue-500 text-white rounded-xl font-semibold mr-3">Demo</div>
+          <div class="px-10 py-3 border-2 border-blue-500  text-blue-500 rounded-xl font-semibold mr-3">Code</div>
+        </div>
+      </div>
+    </section>
+    <!--hobbies-->
     <section class="bg-white rounded-xl shadow-md m-3 p-6 w-1/3 float-left">
       <div class="text-2xl font-semibold pb-6">Hobbies</div>
       <div class="mb-6">
@@ -115,5 +156,7 @@
         <a class="col-span-2 text-blue-500 font-semibold" href="">dev.to</a>
       </div>
     </section>
+    
+    
 </body>
 </html>
